--- a/view/css/dashboard/view.css
+++ b/view/css/dashboard/view.css
@@ -150,12 +150,15 @@ body.dashboard div#project-selector label{
     font-weight: bold;
     font-size: 16px;
     margin-right: 5px;
+    width: 150px;
+    display: inline-block;
 }
 
 body.dashboard div#project-selector select{
-    width: 770px;
+    width: 730px;
     text-transform: uppercase;
     font-size: 14px;
+    margin-bottom: 5px;
 }
 
 /* Lista entradas */
