Base para convocatorias en portada y ver todos en discover y otros arreglos relacionados

--- a/view/css/goteo.css
+++ b/view/css/goteo.css
@@ -16,6 +16,7 @@
 @import url('tipsy/tipsy.css');
 @import url('about.css');
 @import url('feed.css');
+@import url('call.css');
 
 div#sub-header > div,
 div#sub-header-secondary > div {
