--- a/view/css/call/splash.css
+++ b/view/css/call/splash.css
@@ -487,6 +487,7 @@ a.button.location {
 a.button.info {
 	margin-right: 1em;
 	margin-left: .5em;
+    margin-bottom: 30px;
 }
 
 a.button.info.long {
