Arreglo de imagen de cabecera de perfil de usuario para que no estire las que son estrechas Tambien en el avatar del widget investor y otro detalle en el mini legend de worthcracy

--- a/view/css/project/widget/project.css
+++ b/view/css/project/widget/project.css
@@ -93,8 +93,8 @@ div.widget.project div.image div.investor {
 }
 
 div.widget.project div.image div.investor img {
-    width: 34px !important;
-    height: 34px !important;
+/*    width: 34px !important; */
+/*    height: 34px !important; */
     margin: 3px;
     float: left;
 }
