--- a/view/css/call/view.css
+++ b/view/css/call/view.css
@@ -118,7 +118,6 @@ div#header div#menu > ul {
 div#header div#menu > ul > li {
     text-align: left;
 	float: left;
-	line-height: 1.8em;
 }
 
 div#super-header ul > li.home > a {    
@@ -127,7 +126,7 @@ div#super-header ul > li.home > a {
     display: block;
     line-height: 2000px;
     width: 57px;
-    height: 16px;  
+    height: 17px;
     background: url('/view/css/header/goteo-mini.png') no-repeat left center;
 }
 
@@ -139,21 +138,7 @@ div#super-header ul > li.campanya {
 	float: left;
 	text-transform: uppercase;
 	font-weight: bold;
-	vertical-align: middle;
-	line-height: 1.5em !important;
-}
-
-div#super-header ul > li.campanya > a,
-div#super-header ul > li.create > a {
-    padding: .4em 1.8em .4em .8em;
-    font-size: 12px;
-    color: white;
-    display: inline-block;
-    margin: .68em .2em .6em 0;
-    max-width: 7.5em;
-    text-align: left;
-	width:80px;
-	line-height: 1em;
+	line-height: 20px;
 }
 
 div#super-header div#rightside {
