css mac carrusel convocatorias en portada escalon de columnas en las pagins de convocatorias cabecera de cofinanciadores pagina de aportar mas usable menu idiomas sobre paginas convocatorias con fondo fullscreen grabacion de aporte a solo una recompensa

--- a/view/css/call.css
+++ b/view/css/call.css
@@ -370,6 +370,8 @@ div.callrow a.next {
     text-indent: 24px;
     display: inline-block;
     cursor: pointer;
+    margin: 0;
+    padding: 0;
 }
 
 div#calls a.prev {
