--- a/view/css/call/view.css
+++ b/view/css/call/view.css
@@ -210,8 +210,8 @@ div#super-header ul.menu-right > li > a:hover {
 div#super-header ul li#lang {
 	background:url('/view/css/bolita_gris.png') 4px 5px no-repeat transparent;
 	margin-left: 15px;
-    padding-right: 22px;
-    width: 44px;
+    padding-right: 18px !important;
+    width: 52px;
 	margin-right: 0 !important;
 }
 
@@ -220,8 +220,9 @@ div#super-header ul li#lang.active {
 }
 
 div#super-header ul li#lang a {
-	padding-right: 5px;
-	background: url('/view/css/lang-triangulo.png') no-repeat scroll 100% bottom transparent;
+	padding-left: 25px;
+	padding-right: 10px;
+	background: url('/view/css/lang-triangulo.png') no-repeat right bottom transparent;
 	cursor:default;
 }
 
@@ -233,12 +234,11 @@ div#super-header ul li#lang.active a:hover {
 
 ul.lang {
 	position: absolute;
-	right: 2px;
-	top: 0;
+	right: 194px;
+	top: 25px;
 	z-index: 1000;
 	list-style:none;
 	display:none;
-	background-color: #fff;
 	margin:0;
 	padding:0;
 }
@@ -480,7 +480,7 @@ div#header ul > li.dashboard > div > ul > li > a:hover {
 	width: 175px;
 	float: left; 
 	background-color: #f5f1f2;
-	padding: 30px 0 30px 15px;
+	padding: 20px 0 20px 15px;
     margin: 0;
 }
 
@@ -593,7 +593,7 @@ div#header ul > li.dashboard > div > ul > li > a:hover {
 /* Content */
 #content {
 	width: 670px;
-	padding: 15px 35px 30px;
+	padding: 20px 0px 20px 30px;
 	float: left;
 	background-color: #fff;
     margin: 0;
@@ -611,6 +611,7 @@ div#header ul > li.dashboard > div > ul > li > a:hover {
 #content p.block {
 	background: url('/view/css/call/side-border.gif') no-repeat left bottom;
 	padding-bottom: 15px;
+    margin: 0;
 }
 
 /* Iconos */
@@ -720,7 +721,6 @@ a.button {
     border: none;    
     cursor: pointer;
     font-weight: normal;
-    margin: 0;
     color: white;
     margin: .5em 0;
     display: inline-block;
