Codigo para pantalla de mantenimiento, arreglos de publicacion de modificaciones, cambiando el quedan tantos dias por un quedan tantos h/m/s si son 2 dias o financiado/archivado el tal si ya no esta en campaña.

--- a/view/css/project/widget/project.css
+++ b/view/css/project/widget/project.css
@@ -481,11 +481,19 @@ div.widget.project div.meter dl dt.days {
     text-transform: uppercase;
 }
 
+div.widget.project div.meter dl dt.days.long {
+    width: 100px !important;
+}
+
 div.widget.project div.meter dl dd.days {
     left: 70px;
     right: -40px;
     color: #ee4843;
     font-weight: bold;
+}
+
+div.widget.project div.meter dl dd.days.long {
+    left: 100px !important;
 }
 
 div.widget.project div.rewards {
