Al clickar los botones de colaborar salta al mensaje listo para escribir y enviar

--- a/view/css/project/widget/collaborations.css
+++ b/view/css/project/widget/collaborations.css
@@ -35,5 +35,5 @@ div.widget.project-collaborations > a.more {
     float: right;
     text-decoration: none;
 	position: relative;
-	top: 22px;
+/*	top: 22px; */
 }
