--- a/view/css/about.css
+++ b/view/css/about.css
@@ -8,7 +8,7 @@ body.about div#sub-header {
 }
 
 div.field {
-    margin-top: 10px;
+    margin-top: 5px;
 }
 
 /* pagina Info */
@@ -107,26 +107,35 @@ div.widget.about-sidebar-module ul li a:hover {
 /* Cuadro de mensaje */
 div.widget.contact-message label {
     margin-left: 1px;
+	font-size: 11px;
 }
 
 div.widget.contact-message input {
     display: block;
     background-color: #CCE5E6;
-    width: 350px;
-    margin: -1px;
-    padding: .3em 0;
+    width: 346px;
+    padding: 2px;
+	height: 14px;
+	margin-top: 3px;
+	font-size: 12px;
 }
 
 div.widget.contact-message input.short {
-    width: 175px !important;
+    width: 167px !important;
+	height: 14px;
+	font-size: 12px;
+	padding: 2px;
+	margin-right: 2px;
+	margin-top: 3px;
 }
 
 div.widget.contact-message textarea {
     display: block;
     background-color: #CCE5E6;
     width: 350px;
-    margin: -1px;
     padding: .3em 0;
+	margin-top: 3px;
+	font-size: 12px;
 }
 
 div.widget.contact-message .button {
