--- a/view/css/user/profile.css
+++ b/view/css/user/profile.css
@@ -4,6 +4,16 @@
 @import url('widget/supporters.css');
 @import url('widget/mates.css');
 
+/* Distintivo de nodo */
+body.user-profile div#sub-header div.nodemark {
+    text-align: right;
+    font-size: 16px;
+    font-weight: bold;
+    color: #B5161E;
+    padding-right: 300px;
+    margin-top: -30px;
+}
+
 body.user-profile div#main div.widget, 
 body.community div#main div.widget {
     margin-bottom: 20px;
